java/springboot/kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-v2
  namespace: istio-demo
  labels:
    app: recommendation
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
        version: v2
    spec:
      containers:
      - name: recommendation
        image: gcr.io/cirrus-initial-project/recommendation:v2
        ports:
        - containerPort: 8080
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-v1
  namespace: istio-demo
  labels:
    app: recommendation
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
    spec:
      containers:
      - name: recommendation
        image: gcr.io/cirrus-initial-project/recommendation:v1
        ports:
        - containerPort: 8080
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  namespace: istio-demo
  labels:
    app: recommendation    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: recommendation
  type: LoadBalancer
