java/springboot/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-virtualservice
  namespace: istio-demo
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: recommendation-v1
      weight: 90
    - destination:
        host: recommendation
        subset: recommendation-v2
      weight: 10
